Add support for <role>_ingress_class_name
Change-Id: I7b37dda12036e7a9e0ada33fdfe6d45511b0ee18
(cherry picked from commit c139abc1d338f923ab5d528460d2f4906b78e2e2)

--- a/roles/barbican/tasks/main.yml
+++ b/roles/barbican/tasks/main.yml
@@ -30,6 +30,7 @@
     openstack_helm_ingress_service_name: barbican-api
     openstack_helm_ingress_service_port: 9311
     openstack_helm_ingress_annotations: "{{ barbican_ingress_annotations }}"
+    openstack_helm_ingress_class_name: "{{ barbican_ingress_class_name }}"
 
 - name: Create creator role
   openstack.cloud.identity_role:
