Add support for <role>_ingress_class_name
Change-Id: I7b37dda12036e7a9e0ada33fdfe6d45511b0ee18
(cherry picked from commit c139abc1d338f923ab5d528460d2f4906b78e2e2)

--- a/roles/barbican/defaults/main.yml
+++ b/roles/barbican/defaults/main.yml
@@ -19,7 +19,11 @@ barbican_helm_chart_ref: /usr/local/src/barbican
 barbican_helm_release_namespace: openstack
 barbican_helm_values: {}
 
+# Class name to use for the Ingress
+barbican_ingress_class_name: "{{ atmosphere_ingress_class_name }}"
+
 # List of annotations to apply to the Ingress
 barbican_ingress_annotations: {}
+
 # Barbican key encryption key
 barbican_kek: "{{ undef(hint='You must specify a Barbican key encryption key') }}"
