--- a/roles/manila/defaults/main.yml
+++ b/roles/manila/defaults/main.yml
@@ -19,6 +19,9 @@ manila_helm_chart_ref: /usr/local/src/manila
 manila_helm_release_namespace: openstack
 manila_helm_values: {}
 
+# Class name to use for the Ingress
+manila_ingress_class_name: "{{ atmosphere_ingress_class_name }}"
+
 # List of annotations to apply to the Ingress
 manila_ingress_annotations: {}
 
