--- a/roles/designate/defaults/main.yml
+++ b/roles/designate/defaults/main.yml
@@ -19,6 +19,9 @@ designate_helm_chart_ref: /usr/local/src/designate
 designate_helm_release_namespace: openstack
 designate_helm_values: {}
 
+# Class name to use for the Ingress
+designate_ingress_class_name: "{{ atmosphere_ingress_class_name }}"
+
 # List of annotations to apply to the Ingress
 designate_ingress_annotations: {}
 
