--- a/roles/glance/defaults/main.yml
+++ b/roles/glance/defaults/main.yml
@@ -19,6 +19,9 @@ glance_helm_chart_ref: /usr/local/src/glance
 glance_helm_release_namespace: openstack
 glance_helm_values: {}
 
+# Class name to use for the Ingress
+glance_ingress_class_name: "{{ atmosphere_ingress_class_name }}"
+
 # List of annotations to apply to the Ingress
 glance_ingress_annotations: {}
 
