--- a/roles/heat/defaults/main.yml
+++ b/roles/heat/defaults/main.yml
@@ -19,6 +19,10 @@ heat_helm_chart_ref: /usr/local/src/heat
 heat_helm_release_namespace: openstack
 heat_helm_values: {}
 
+# Class name to use for the Ingress
+heat_ingress_class_name: "{{ atmosphere_ingress_class_name }}"
+
+# List of annotations to apply to the Ingress
 heat_ingress_annotations: {}
 
 # Encryption key for Heat to use for encrypting sensitive data
