--- a/roles/nova/defaults/main.yml
+++ b/roles/nova/defaults/main.yml
@@ -25,6 +25,10 @@ nova_ssh_key: "{{ undef(hint='You must specifiy an SSH key for Nova.') }}"
 # List of flavors to provision inside Nova
 nova_flavors: []
 
+# Class name to use for the Ingress
+nova_api_ingress_class_name: "{{ atmosphere_ingress_class_name }}"
+nova_novnc_ingress_class_name: "{{ atmosphere_ingress_class_name }}"
+
 # List of annotations to apply to the Ingress
 nova_api_ingress_annotations: {}
 nova_novnc_ingress_annotations: {}
