--- a/roles/placement/defaults/main.yml
+++ b/roles/placement/defaults/main.yml
@@ -19,5 +19,8 @@ placement_helm_chart_ref: /usr/local/src/placement
 placement_helm_release_namespace: openstack
 placement_helm_values: {}
 
+# Class name to use for the Ingress
+placement_ingress_class_name: "{{ atmosphere_ingress_class_name }}"
+
 # List of annotations to apply to the Ingress
 placement_ingress_annotations: {}
