Add support for MFA options
Change-Id: I0e667f702a5208ce1c2235754ba8e77c66931775
(cherry picked from commit 99c00a72202cf81e5e1c83a71e9cab9f2614d471)

--- a/roles/keystone/defaults/main.yml
+++ b/roles/keystone/defaults/main.yml
@@ -42,6 +42,7 @@ keystone_keycloak_realm_name: Atmosphere
 # keystone_keycloak_realm_default_brute_force_max_delta_time_seconds:
 # keystone_keycloak_realm_default_minimum_quick_login_wait_seconds:
 # keystone_keycloak_realm_default_quick_login_check_milli_seconds:
+# keystone_keycloak_realm_default_totp_default_action:
 
 keystone_keycloak_client_id: keystone
 # keystone_keycloak_client_secret:
