--- a/roles/keystone/tasks/main.yml
+++ b/roles/keystone/tasks/main.yml
@@ -72,6 +72,9 @@
   no_log: true
   run_once: true
   community.general.keycloak_client:
+    # keystone client oauth setting
+    attributes:
+      "oauth2.device.authorization.grant.enabled": "true"
     # Keycloak settings
     auth_keycloak_url: "{{ item.keycloak_server_url }}"
     auth_realm: "{{ item.keycloak_user_realm_name }}"
