Enable {priority,runtime}ClassName for Keystone
Change-Id: Ib93f058764bf6c053fbc7179667e95ec3fd3e559
(cherry picked from commit cf2006c46728d0a57f0628e2af7d1cb9a070d578)

--- a/charts/keystone/values.yaml
+++ b/charts/keystone/values.yaml
@@ -158,6 +158,18 @@ dependencies:
           service: local_image_registry
 
 pod:
+  priorityClassName:
+    keystone_api: null
+    keystone_tests: null
+    keystone_credential_rotate: null
+    keystone_fernet_rotate: null
+    db_sync: null
+  runtimeClassName:
+    keystone_api: null
+    keystone_tests: null
+    keystone_credential_rotate: null
+    keystone_fernet_rotate: null
+    db_sync: null
   security_context:
     keystone:
       pod:
