Enable {priority,runtime}ClassName for Magnum
Change-Id: I884daeb6d890c88bb0beae50069962c25a77fd66
(cherry picked from commit 7fa5c2a39d7310988c697962c067a412ab18e3d1)

--- a/charts/magnum/values.yaml
+++ b/charts/magnum/values.yaml
@@ -482,6 +482,14 @@ endpoints:
         default: 24220
 
 pod:
+  priorityClassName:
+    magnum_api: null
+    magnum_conductor: null
+    db_sync: null
+  runtimeClassName:
+    magnum_api: null
+    magnum_conductor: null
+    db_sync: null
   user:
     magnum:
       uid: 42424
