Enable {priority,runtime}ClassName for Octavia
Change-Id: I2cc89a1610a70ac8b97530d851dc3376110fa8a1
(cherry picked from commit a37a7b138e365b442f0e41663a55b46bd67874fd)

--- a/charts/octavia/values.yaml
+++ b/charts/octavia/values.yaml
@@ -526,6 +526,18 @@ endpoints:
         public: 80
 
 pod:
+  priorityClassName:
+    octavia_health_manager: null
+    octavia_api: null
+    octavia_housekeeping: null
+    octavia_worker: null
+    db_sync: null
+  runtimeClassName:
+    octavia_health_manager: null
+    octavia_api: null
+    octavia_housekeeping: null
+    octavia_worker: null
+    db_sync: null
   user:
     octavia:
       uid: 42424
