Enable {priority,runtime}ClassName for Placement
Change-Id: I367430fa2f03e6ac4a3687d5a1ef0f4c592a60ab
(cherry picked from commit e11498d26515b06cbf3828441eaf22787700df45)

--- a/charts/placement/values.yaml
+++ b/charts/placement/values.yaml
@@ -278,6 +278,12 @@ endpoints:
         service: 8778
 
 pod:
+  priorityClassName:
+    placement: null
+    db_sync: null
+  runtimeClassName:
+    placement: null
+    db_sync: null
   security_context:
     placement:
       pod:
